# awto-mcp-riden

./: .gitignore  ARCHITECTURE.md  ATTRIBUTION.md  BLE_ROADMAP.md  BT_STATUS.md  README.md  USB_TESTING.md  mcp_server.py  protocol.py  pyproject.toml  riden_daemon.py  riden_register.py  riden_transport.py  test_harness.py  ttu_cli.py
.github/: copilot-instructions.md
docs/: design-notes.md  mr11_sine_test.md  timing_test_set_summary.md
docs/data/: ble_profile_30s.json
docs/reports/: ble_air_trace_analysis_2026-05-02.md  index.md
docs/reports/rk6006-id60066-fw109/timing_matrix/20260502-033448Z/: manifest.json  report.md  timing_matrix.json
docs/reports/rk6006-id60066-fw109/timing_matrix/20260502-035417Z/: manifest.json  report.md  timing_matrix.json
docs/reports/rk6006-id60066-fw109/timing_matrix/20260502-035428Z/: manifest.json  report.md  timing_matrix.json
docs/reports/rk6006-id60066-fw109/waveform_capture/20260502-035650Z/: manifest.json  report.md
scripts/: ble_globe_turnon.py  ble_profile.py  connected_load_timing_matrix.py  install-deps-fedora.sh  led_mr11_test.py  mcp_restart.sh  plot_ble_globe.py  plot_serial_comparison.py  plot_waveforms.py  raw_serial_read.py  regen_waveforms.py  regenerate_timing_artifacts.sh  safe_waveform_test.py  timing_test_set.py  transport_test.py  waveform_capture.py
