[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awto-mcp-riden"
version = "0.1.0"
description = "MCP server for Riden RD60xx power supplies — Modbus RTU over USB/BT serial"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Dan", email = "dan@awto.au" },
    { name = "GitHub Copilot (Claude Sonnet 4.6)", role = "implementation" },
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "modbus-tk>=1.1",
    "pyserial>=3.5",
    "bleak>=0.22",
    "colorlog>=6.8",
    "rich-argparse>=1.4",
    "psutil>=5.9",
]

[project.scripts]
awto-riden = "ttu_cli:main"
awto-riden-mcp = "mcp_server:main"

[tool.uv]
python = "3.14t"

[tool.hatch.build.targets.wheel]
packages = ["."]
